@@ -1,3 +1,8 @@
+2007-09-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-font.c: (font_render_load), (cb_show_details): break out
+	of the loop asap; use _prepend instead of _append
+
 2007-08-31  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-font.c: (font_render_load), (setup_font_pair),
